image stretched issue fixed in simple profile card

--- a/styles/components/_simpleProfileCard.scss
+++ b/styles/components/_simpleProfileCard.scss
@@ -7,7 +7,7 @@
         padding: 0 0 7rem 0;
         .thumbnail-img {
             height: 4.8rem;
-            width: 4.8rem;
+            min-width: 4.8rem;
             border-radius: 50%;
         }
         .intro {
